--- a/src/components/Home/Home.less
+++ b/src/components/Home/Home.less
@@ -1,8 +1,12 @@
 .pending {
-  color: yellow !important;
+  button {
+    color: yellow !important;
+  }
 }
 .active {
-  color: deepskyblue !important;
+  button {
+    color: deepskyblue !important;
+  }
 }
 a {
   color: #9feaf9 !important;
