--- a/src/App.less
+++ b/src/App.less
@@ -18,3 +18,7 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.isPending {
+  background-color: red !important;
+}
