--- a/src/App.less
+++ b/src/App.less
@@ -9,6 +9,19 @@ body {
   height: 100vh;
 }
 
+.test {
+  background-image: url(/public/vite.svg);
+  height: 33%;
+}
+.test2 {
+  background-image: url(/@/vite.svg);
+  height: 33%;
+}
+.test3 {
+  background-image: url(/src/vite.svg);
+  height: 33%;
+}
+
 * {
   padding: 0;
   margin: 0;
